--- a/any-proxy/examples/anyproxy/conf/anyproxy_demo.conf
+++ b/any-proxy/examples/anyproxy/conf/anyproxy_demo.conf
@@ -298,23 +298,6 @@ net {
         wasm_main_config = ""
     ```r;
 
-    #层级：main
-    #domain模式下，域名到http协议解析获取，内置toml格式扩展
-    domain_from_http_v1 raw = r```
-            #是否打开
-            is_open = true
-            #限制协议method值， true通过， false拒接
-            [check_methods]
-            get = true
-            post = true
-            put = true
-            delete = true
-            patch = true
-            head = true
-            options = true
-            purge = true
-    ```r;
-
     #层级：main|server|local
     #http头添加Expires: Tue, 16 Apr 2024 15:49:10 GMT， Cache-Control: max-age=10
     expires usize = 0;
@@ -496,6 +479,24 @@ net {
         #层级：server
         #当前匹配域名值
         domain str = "www.example.cn";
+
+        #层级：server
+        #domain模式下，域名到http协议解析获取, 必须配置在监听配置前面，内置toml格式扩展
+        domain_from_http_v1 raw = r```
+                #是否打开
+                is_open = true
+                #限制协议method值， true通过， false拒接
+                [check_methods]
+                get = true
+                post = true
+                put = true
+                delete = true
+                patch = true
+                head = true
+                options = true
+                purge = true
+        ```r;
+
 
         #层级：server
         #四层代理，port模式监听tcp协议，内置toml格式扩展
