--- a/any-proxy/examples/anyproxy/conf/anyproxy_edge_to_proxy.conf
+++ b/any-proxy/examples/anyproxy/conf/anyproxy_edge_to_proxy.conf
@@ -79,14 +79,14 @@ net {
         name = "proxy_cache_1"
         path = "C:/Users/yefy/Desktop/proxy_cache/proxy_cache_1"
         levels = "2:2"
-        max_size = 4096
+        max_size = 0
     ```r;
     proxy_cache window_raw = r```
         is_open = true
         name = "proxy_cache_2"
         path = "C:/Users/yefy/Desktop/proxy_cache/proxy_cache_2"
         levels = "2:2"
-        max_size = 4096
+        max_size = 0
     ```r;
 
 
@@ -95,19 +95,20 @@ net {
         name = "proxy_cache_1"
         path = "/root/Desktop/proxy_cache/proxy_cache_1"
         levels = "2:2"
-        max_size = 4096
+        max_size = 0
     ```r;
     proxy_cache linux_raw = r```
         is_open = true
         name = "proxy_cache_2"
         path = "/root/Desktop/proxy_cache/proxy_cache_2"
         levels = "2:2"
-        max_size = 4096
+        max_size = 0
     ```r;
 
     proxy_cache_name strs = proxy_cache_1 proxy_cache_2;
     proxy_request_slice usize = 3;
-    proxy_cache_key str = "${http_ups_request_scheme}${http_ups_request_method}${http_ups_request_host}${http_ups_request_uri}";
+    proxy_cache_key str = "${http_request_scheme}${http_request_method}${http_request_host}${http_request_uri}";
+    #proxy_cache_key str = "${http_ups_request_scheme}${http_ups_request_method}${http_ups_request_host}${http_ups_request_uri}";
 
 
 r###
@@ -194,19 +195,6 @@ r###
     ```r;
 ###r
 
-    domain_from_http_v1 raw = r```
-            is_open = true
-            [check_methods]
-            get = true
-            post = true
-            put = true
-            delete = true
-            patch = true
-            head = true
-            options = true
-            purge = true
-    ```r;
-
     stream_delay_mil_time u64 = 200;
     stream_nodelay_size usize = 8192;
     is_open_sendfile linux_bool= true;
@@ -238,7 +226,7 @@ r###
 
             #default false
             access_log_stdout = true
-            is_err_access_log = false
+            is_err_access_log = true
     ```r;
 
 
