--- a/any-proxy/examples/anyproxy/conf/anyproxy_edge_to_proxy_domain.conf
+++ b/any-proxy/examples/anyproxy/conf/anyproxy_edge_to_proxy_domain.conf
@@ -65,6 +65,20 @@
 #curl http://www.example.cn:20104 -k -v
     server {
         domain str = "www.example.cn";
+
+        domain_from_http_v1 raw = r```
+                is_open = true
+                [check_methods]
+                get = true
+                post = true
+                put = true
+                delete = true
+                patch = true
+                head = true
+                options = true
+                purge = true
+        ```r;
+
          domain_listen_tcp raw = r```
             address = "0.0.0.0:20104"
         ```r;
