--- a/any-proxy/examples/anyproxy/conf/anyproxy_origin.conf
+++ b/any-proxy/examples/anyproxy/conf/anyproxy_origin.conf
@@ -34,6 +34,7 @@ upstream {
 }
 
 net {
+r###
     wasm_serverless raw = r```
         [[wasm]]
         wasm_path = "../../../wasm/http-serverless/target/wasm32-wasi/release/wasm_server.wasm"
@@ -41,7 +42,7 @@ net {
             name = "wasm_http_serverless_test"
             '''
     ```r;
-
+###r
     stream_delay_mil_time u64 = 200;
     stream_nodelay_size usize = 8192;
     is_open_sendfile linux_bool= true;
@@ -76,14 +77,17 @@ net {
             access_log_stdout = true
             is_err_access_log = true
     ```r;
-
+#r###
     server {
-        domain str = "www.example.cn";
+        domain str = "www.example.cn $$(.*)";
          net_server_static_http window_raw = r```
             path = "C:/Users/yefy/Desktop/yefy/tools/nginx/nginx-1.18.0/html"
         ```r;
          net_server_static_http linux_raw = r```
             path = "/root/Desktop/fdisk/nginx/nginx-1.18.0/nginx/html"
+        ```r;
+        domain_listen_tcp raw = r```
+            address = "0.0.0.0:80"
         ```r;
         domain_listen_tcp raw = r```
             address = "0.0.0.0:19090"
@@ -107,7 +111,7 @@ net {
             ```r;
         }
     }
-
+###r
     server {
         domain str = "www.example.cn";
         net_server_echo_http raw = r```
