--- a/any-proxy/Cargo.toml
+++ b/any-proxy/Cargo.toml
@@ -134,6 +134,7 @@ time = "0.2"
 httparse = "1.8.0"
 radix_trie = "0.2.1"
 crc32fast = "1.4.0"
+fs_extra = "1.3.0"
 
 clap = { version = "4.3.19", features = ["derive"] }
 #wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "2ade3ad", features = ["component-model"] }
