--- a/any-proxy/examples/anyproxy/conf/anyproxy_edge_to_proxy.conf
+++ b/any-proxy/examples/anyproxy/conf/anyproxy_edge_to_proxy.conf
@@ -109,7 +109,12 @@ net {
     proxy_request_slice usize = 3;
     proxy_cache_key str = "${http_request_scheme}${http_request_method}${http_request_host}${http_request_uri}";
     #proxy_cache_key str = "${http_ups_request_scheme}${http_ups_request_method}${http_ups_request_host}${http_ups_request_uri}";
-
+    proxy_cache_methods strs = GET HEAD POST;
+    proxy_cache_valid raw = r```
+        [[proxy_cache_valid]]
+        status = ["500", "404", "any"]
+        time = 10
+    ```r;
 
 r###
     wasm_serverless raw = r```
