--- a/any-proxy/examples/anyproxy/conf/anyproxy_edge_to_proxy_http.conf
+++ b/any-proxy/examples/anyproxy/conf/anyproxy_edge_to_proxy_http.conf
@@ -36,6 +36,17 @@
         local {
             rule raw = r```
                 [[rule]]
+                 data= "${http_request_uri}"
+                 filter = "/test_nil"
+            ```r;
+
+            expires usize = 11;
+            proxy_pass_upstream str = "upstream_nil";
+        }
+
+        local {
+            rule raw = r```
+                [[rule]]
                 data= "${http_request_url}"
                 filter = "http"
                 [[rule]]
@@ -94,6 +105,18 @@
             address = "0.0.0.0:20302"
             ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem"}
         ```r;
+
+        local {
+            rule raw = r```
+                [[rule]]
+                 data= "${http_request_uri}"
+                 filter = "/test_nil"
+            ```r;
+
+            expires usize = 11;
+            proxy_pass_upstream str = "upstream_nil";
+        }
+
         local {
             rule raw = r```
                 [[rule]]
