--- a/any-proxy/examples/anyproxy/conf/anyproxy_demo.conf
+++ b/any-proxy/examples/anyproxy/conf/anyproxy_demo.conf
@@ -226,6 +226,17 @@ net {
     #存储文件缓存key值， 支持预制变量
     proxy_cache_key str = "${http_ups_request_scheme}${http_ups_request_method}${http_ups_request_host}${http_ups_request_uri}";
 
+    #层级：main|server|local
+    #需要缓存的method: GET HEAD POST PUT DELETE PATCH OPTIONS
+    proxy_cache_methods strs = GET HEAD POST;
+
+    #层级：main|server|local
+    #非200 206，的状态缓存
+    proxy_cache_valid raw = r```
+        [[proxy_cache_valid]]
+        status = ["500", "404", "any"]
+        time = 10
+    ```r;
 
     #层级：main|server|local
     #wasm_access 阶段添加webassembly热更新脚本，内置toml格式扩展
