--- a/any-proxy/examples/anyproxy/conf/anyproxy_edge_to_proxy_upstream.conf
+++ b/any-proxy/examples/anyproxy/conf/anyproxy_edge_to_proxy_upstream.conf
@@ -327,6 +327,7 @@ upstream {
          balancer str = random;
          proxy_pass_tcp raw = r```
              address = "www.upstream.cn:10201"
+             #address = "www.upstream.cn:19090"
              heartbeat = {interval = 10, timeout = 10, fail = 3}
              dynamic_domain = {interval = 10}
              is_proxy_protocol_hello = true
@@ -367,10 +368,6 @@ upstream {
          ```r;
          ###r
      }
-
-
-
-
 
     server {
          #配置名字，可以根据名字来引用配置
@@ -692,4 +689,18 @@ upstream {
         ###r
     }
 
+
+
+     server {
+          #配置名字，可以根据名字来引用配置
+          name str = upstream_nil;
+          #负载均衡 weight round_robin random ip_hash ip_hash_active fair
+          balancer str = random;
+          proxy_pass_tcp raw = r```
+              address = "www.upstream.cn:19201"
+              #heartbeat = {interval = 10, timeout = 10, fail = 3}
+              #dynamic_domain = {interval = 10}
+              is_proxy_protocol_hello = true
+          ```r;
+      }
 }
