--- a/any-proxy/examples/anyproxy/conf/anyproxy_demo.conf
+++ b/any-proxy/examples/anyproxy/conf/anyproxy_demo.conf
@@ -114,7 +114,8 @@ upstream {
             #tcp回源地址
             address = "www.upstream.cn:11131"
             #心跳配置 interval：时间间隔， timeout：超时失败， fail：最大失败了，丢弃这个ip
-            #heartbeat = {interval = 10, timeout = 10, fail = 3} #default 关闭
+            # http 为空走默认心跳， 如果配置了，强制走http请求，host取自address的，发起 HEAD http://www.upstream.cn:10203/1.txt
+            #heartbeat = {interval = 10, timeout = 10, fail = 3, http = {port = 10203, uri = "/1.txt"}} #default 关闭
             #动态域名解析 interval：时间间隔
             #dynamic_domain = {interval = 10}  #default 关闭
             #是否开启protocol_hello携带更多数据给上游，仅支持内部服务使用
@@ -237,6 +238,35 @@ net {
         status = ["500", "404", "any"]
         time = 10
     ```r;
+
+    #层级：local
+    #uri 添加/purge开头， 开启proxy_cache_purge bool = true; 用于删除缓存文件
+    proxy_cache_purge bool = true;
+
+
+    #层级：main|server|local
+    #过期文件定时删除, 单位秒
+    proxy_expires_file_timer u64 = 10;
+
+
+    #层级：main|server|local
+    #热点文件配置
+    proxy_hot_file raw = r```
+        #是否打开
+        is_open = false;
+        #时间间隔
+        hot_interval_time = 60;
+        #最大多少个
+        hot_top_count = 10;
+        #最小读取多少个, 暂时不支持
+        hot_read_min_count = 10;
+        #磁盘io达到多少后,开始迁移热点文件
+        hot_io_percent = 70;
+    ```r;
+
+    #层级：main
+    #最大缓存文件数量, 默认0 不限制
+    proxy_max_open_file usize = 0;
 
     #层级：main|server|local
     #wasm_access 阶段添加webassembly热更新脚本，内置toml格式扩展
