--- a/any-proxy/examples/anyproxy/conf/anyproxy_edge_to_proxy.conf
+++ b/any-proxy/examples/anyproxy/conf/anyproxy_edge_to_proxy.conf
@@ -107,13 +107,31 @@ net {
 
     proxy_cache_name strs = proxy_cache_1 proxy_cache_2;
     proxy_request_slice usize = 3;
-    proxy_cache_key str = "${http_request_scheme}${http_request_method}${http_request_host}${http_request_uri}";
-    #proxy_cache_key str = "${http_ups_request_scheme}${http_ups_request_method}${http_ups_request_host}${http_ups_request_uri}";
+    proxy_cache_key str = "${http_request_method}${http_request_scheme}${http_request_host}${http_request_uri}";
+    #proxy_cache_key str = "${http_ups_request_method}${http_ups_request_scheme}${http_ups_request_host}${http_ups_request_uri}";
     proxy_cache_methods strs = GET HEAD POST;
     proxy_cache_valid raw = r```
         [[proxy_cache_valid]]
         status = ["500", "404", "any"]
-        time = 10
+        time = 30
+    ```r;
+
+    proxy_expires_file_timer u64 = 10;
+    proxy_max_open_file usize = 5;
+
+    #层级：main|server|local
+    #热点文件配置
+    proxy_hot_file raw = r```
+        #是否打开
+        is_open = true
+        #时间间隔
+        hot_interval_time = 15
+        #最大多少个
+        hot_top_count = 5
+        #最小读取多少个, 暂时不支持
+        hot_read_min_count = 10
+        #磁盘io达到多少后,开始迁移热点文件
+        hot_io_percent = 90
     ```r;
 
 r###
