--- a/any-proxy/examples/anyproxy/conf/anyproxy_edge_to_proxy_http.conf
+++ b/any-proxy/examples/anyproxy/conf/anyproxy_edge_to_proxy_http.conf
@@ -47,6 +47,19 @@
         local {
             rule raw = r```
                 [[rule]]
+                 data= "${http_request_uri}"
+                 filter = "/purge"
+            ```r;
+
+            proxy_cache_purge bool = true;
+
+            expires usize = 11;
+            proxy_pass_upstream str = "upstream8";
+        }
+
+        local {
+            rule raw = r```
+                [[rule]]
                 data= "${http_request_url}"
                 filter = "http"
                 [[rule]]
