--- a/any-proxy/examples/anyproxy/conf/anyproxy_edge_to_proxy_upstream.conf
+++ b/any-proxy/examples/anyproxy/conf/anyproxy_edge_to_proxy_upstream.conf
@@ -328,8 +328,8 @@ upstream {
          proxy_pass_tcp raw = r```
              address = "www.upstream.cn:10201"
              #address = "www.upstream.cn:19090"
-             heartbeat = {interval = 10, timeout = 10, fail = 3}
-             dynamic_domain = {interval = 10}
+             #heartbeat = {interval = 10, timeout = 10, fail = 3, http = {port = 10203, uri = "/1.txt"}}
+             #dynamic_domain = {interval = 10}
              is_proxy_protocol_hello = true
          ```r;
          #r###
@@ -698,8 +698,8 @@ upstream {
           balancer str = random;
           proxy_pass_tcp raw = r```
               address = "www.upstream.cn:19201"
-              #heartbeat = {interval = 10, timeout = 10, fail = 3}
-              #dynamic_domain = {interval = 10}
+              heartbeat = {interval = 3, timeout = 3, fail = 3}
+              dynamic_domain = {interval = 3}
               is_proxy_protocol_hello = true
           ```r;
       }
