--- a/any-proxy/examples/anyproxy/conf/anyproxy_proxy_to_origin.conf
+++ b/any-proxy/examples/anyproxy/conf/anyproxy_proxy_to_origin.conf
@@ -225,7 +225,7 @@ r###
 
             #default false
             access_log_stdout = true
-            is_err_access_log = true
+            is_err_access_log = false
     ```r;
 
 #upstream1
@@ -434,6 +434,25 @@ r###
             proxy_pass_upstream str = "upstream_http_http";
         }
     }
+
+    server {
+            domain str = "www.upstream.cn";
+            net_server_proxy_http raw = r```
+                #version: http1.1 http2.0 auto
+                proxy_pass = {version = "http1.1"}
+            ```r;
+             domain_listen_tcp raw = r```
+                address = "0.0.0.0:10203"
+            ```r;
+            local {
+                rule raw = r```
+                    [[rule]]
+                    data= ""
+                    filter = "$$(.*)"
+                ```r;
+                proxy_pass_upstream str = "upstream_http_http";
+            }
+        }
 
 #upstream9
 #http(http1.0 http1.1 http2.0)->http, http->(http2.0,https2.0)
