--- a/any-proxy/examples/anyproxy/conf/log4rs.yaml
+++ b/any-proxy/examples/anyproxy/conf/log4rs.yaml
@@ -34,6 +34,9 @@ loggers:
   ext3:
     level: trace
     additive: false
+  is_ups:
+    level: trace
+    additive: false
   wasm:
     level: info
     additive: true
