--- a/any-proxy/examples/anyproxy/conf/log4rs.yaml
+++ b/any-proxy/examples/anyproxy/conf/log4rs.yaml
@@ -37,6 +37,9 @@ loggers:
   is_ups:
     level: trace
     additive: false
+  ms:
+    level: debug
+    additive: false
   wasm:
     level: info
     additive: true
