--- a/any-example/anyproxy/conf/anyproxy_demo.conf
+++ b/any-example/anyproxy/conf/anyproxy_demo.conf
@@ -1,5 +1,4 @@
 ebpf {
-    #内置toml格式扩展
     data raw = r```
         #打开ebpf编译日志
         debug_is_open_ebpf_log  = false
@@ -9,7 +8,6 @@ ebpf {
 }
 
 tunnel {
-    #内置toml格式扩展
     data raw = r```
         #是否打开tunnel协议回源
         is_open_tunnel = false
@@ -18,7 +16,6 @@ tunnel {
 
 #这个模块性能差，已经废弃
 tunnel2 {
-    #内置toml格式扩展
     data raw = r```
         #开启多少线程给tunnel2
         tunnel2_worker_thread  = 0  #default 0 (cpu num)
@@ -51,7 +48,6 @@ common {
 
 socket {
     #tcp服务监听和客户端请求设置配置
-    #内置toml格式扩展
     tcp raw = r```
         [[tcp]]
             #配置名字，可以根据名字来引用配置
@@ -70,7 +66,6 @@ socket {
             tcp_connect_timeout = 60  #default 60
     ```r;
     #quic服务监听和客户端请求设置配置
-    #内置toml格式扩展
     quic raw = r```
         [[quic]]
             #配置名字，可以根据名字来引用配置
@@ -109,7 +104,7 @@ upstream {
         #balancer str = ip_hash;
         #balancer str = ip_hash_active;
         #balancer str = fair;
-        #tcp回源，内置toml格式扩展
+        #tcp回源
         proxy_pass_tcp raw = r```
             #tcp回源地址
             address = "www.upstream.cn:11131"
@@ -121,7 +116,7 @@ upstream {
             #是否开启protocol_hello携带更多数据给上游，仅支持内部服务使用
             is_proxy_protocol_hello = true
         ```r;
-        #ssl回源，内置toml格式扩展
+        #ssl回源
         proxy_pass_ssl raw = r```
             #ssl握手域名
             ssl_domain= "www.example.cn"
@@ -130,7 +125,7 @@ upstream {
             #dynamic_domain = {interval = 10}
             is_proxy_protocol_hello = true
         ```r;
-        #quic回源，内置toml格式扩展
+        #quic回源
         proxy_pass_quic raw = r```
             #quic握手域名
             ssl_domain= "www.example.cn"
@@ -139,7 +134,7 @@ upstream {
             #dynamic_domain = {interval = 10}
             is_proxy_protocol_hello = true
         ```r;
-        #tunnel_tcp回源，内置toml格式扩展
+        #tunnel_tcp回源
         proxy_pass_tunnel_tcp raw = r```
             #max_stream_size最大链接加速， min_stream_cache_size：最小保留多少socket缓存，channel_size：管道大小
             tunnel = { max_stream_size = 5, min_stream_cache_size = 50, channel_size = 64}
@@ -148,7 +143,7 @@ upstream {
             #dynamic_domain = {interval = 10}
             is_proxy_protocol_hello = true
         ```r;
-        #tunnel_ssl回源，内置toml格式扩展
+        #tunnel_ssl回源
         proxy_pass_tunnel_ssl raw = r```
             tunnel = { max_stream_size = 5, min_stream_cache_size = 50, channel_size = 64}
             ssl_domain= "www.example.cn"
@@ -157,7 +152,7 @@ upstream {
             #dynamic_domain = {interval = 10}
             is_proxy_protocol_hello = true
         ```r;
-        #tunnel_quic回源，内置toml格式扩展
+        #tunnel_quic回源
         proxy_pass_tunnel_quic raw = r```
             tunnel = { max_stream_size = 5, min_stream_cache_size = 50, channel_size = 64}
             ssl_domain= "www.example.cn"
@@ -194,7 +189,6 @@ upstream {
 
 net {
     #层级：main
-    #内置toml格式扩展
     proxy_cache raw = r```
         #是否打开这个缓存
         is_open = true
@@ -225,7 +219,7 @@ net {
 
     #层级：main|server|local
     #存储文件缓存key值， 支持预制变量
-    proxy_cache_key str = "${http_ups_request_scheme}${http_ups_request_method}${http_ups_request_host}${http_ups_request_uri}";
+    proxy_cache_key str = "${http_request_method}${http_request_domain}${http_request_uri}";
 
     #层级：main|server|local
     #需要缓存的method: GET HEAD POST PUT DELETE PATCH OPTIONS
@@ -235,7 +229,8 @@ net {
     #非200 206，的状态缓存
     proxy_cache_valid raw = r```
         [[proxy_cache_valid]]
-        status = ["500", "404", "any"]
+        #status = ["500", "404", "any"]
+        status = ["404"]
         time = 10
     ```r;
 
@@ -244,7 +239,7 @@ net {
     proxy_cache_purge bool = true;
 
 
-    #层级：main|server|local
+    #层级：main
     #过期文件定时删除, 单位秒
     proxy_expires_file_timer u64 = 10;
 
@@ -283,7 +278,7 @@ net {
      rewrite strs = ^(.*)/4.txt$ ${1}/1.txt permanent;
 
     #层级：main|server|local
-    #wasm_access 阶段添加webassembly热更新脚本，内置toml格式扩展
+    #wasm_access 阶段添加webassembly热更新脚本
     wasm_access raw = r```
         [[wasm]]
         #webassembly脚本路径
@@ -297,7 +292,7 @@ net {
     ```r;
 
     #层级：main|server|local
-    #wasm_serverless 阶段添加webassembly热更新脚本，内置toml格式扩展
+    #wasm_serverless 阶段添加webassembly热更新脚本
     wasm_serverless raw = r```
         [[wasm]]
         wasm_path = "../../../wasm/serverless/target/wasm32-wasi/release/wasm_server.wasm"
@@ -307,7 +302,7 @@ net {
     ```r;
 
     #层级：main|server|local
-    #wasm_access_log 阶段添加webassembly热更新脚本，内置toml格式扩展
+    #wasm_access_log 阶段添加webassembly热更新脚本
     wasm_access_log raw = r```
         [[wasm]]
         wasm_path = "../../../wasm/http-demo/target/wasm32-wasi/release/wasm_server.wasm"
@@ -317,7 +312,7 @@ net {
     ```r;
 
     #层级：main|server|local
-    #wasm_http_in_headers 阶段添加webassembly热更新脚本，内置toml格式扩展
+    #wasm_http_in_headers 阶段添加webassembly热更新脚本
     wasm_http_in_headers raw = r```
         [[wasm]]
         wasm_path = "../../../wasm/http-in-headers/target/wasm32-wasi/release/wasm_server.wasm"
@@ -325,7 +320,7 @@ net {
     ```r;
 
     #层级：main|server|local
-    #wasm_http_filter_headers_pre 阶段添加webassembly热更新脚本，内置toml格式扩展
+    #wasm_http_filter_headers_pre 阶段添加webassembly热更新脚本
     wasm_http_filter_headers_pre raw = r```
         [[wasm]]
         wasm_path = "../../../wasm/http-filter-headers-pre/target/wasm32-wasi/release/wasm_server.wasm"
@@ -338,7 +333,7 @@ net {
     ```r;
 
     #层级：main|server|local
-    #wasm_http_filter_headers 阶段添加webassembly热更新脚本，内置toml格式扩展
+    #wasm_http_filter_headers 阶段添加webassembly热更新脚本
     wasm_http_filter_headers raw = r```
         [[wasm]]
         wasm_path = "../../../wasm/http-filter-headers/target/wasm32-wasi/release/wasm_server.wasm"
@@ -483,7 +478,7 @@ net {
     directio u64 = 0;
 
     #层级：main|server|local
-    #access_log 日志，内置toml格式扩展
+    #access_log 日志
     access raw = r```
         #如果没有配置就继承父类的配置
         [[access]]
@@ -529,7 +524,7 @@ net {
         domain str = "www.example.cn";
 
         #层级：server
-        #domain模式下，域名到http协议解析获取, 必须配置在监听配置前面，内置toml格式扩展
+        #domain模式下，域名到http协议解析获取, 必须配置在监听配置前面
         domain_from_http_v1 raw = r```
                 #是否打开
                 is_open = true
@@ -547,40 +542,40 @@ net {
 
 
         #层级：server
-        #四层代理，port模式监听tcp协议，内置toml格式扩展
+        #四层代理，port模式监听tcp协议
         port_listen_tcp raw = r```
             address = "0.0.0.0:11231"
         ```r;
 
         #层级：server
-        #四层代理，port模式监听ssl协议，内置toml格式扩展
+        #四层代理，port模式监听ssl协议
         port_listen_ssl raw = r```
             address = "0.0.0.0:11232"
             ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem", ssl_domain = "www.example.cn"}
         ```r;
 
         #层级：server
-        #四层代理，port模式监听quic协议，内置toml格式扩展
+        #四层代理，port模式监听quic协议
         port_listen_quic raw = r```
             address = "0.0.0.0:11231"
             ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem", ssl_domain = "www.example.cn"}
         ```r;
 
         #层级：server
-        #四层代理，domain模式监听tcp协议，内置toml格式扩展
+        #四层代理，domain模式监听tcp协议
         domain_listen_tcp raw = r```
             address = "0.0.0.0:11251"
         ```r;
 
         #层级：server
-        #四层代理，domain模式监听ssl协议，内置toml格式扩展
+        #四层代理，domain模式监听ssl协议
         domain_listen_ssl raw = r```
             address = "0.0.0.0:11252"
             ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem"}
         ```r;
 
         #层级：server
-        #四层代理，domain模式监听quic协议，内置toml格式扩展
+        #四层代理，domain模式监听quic协议
         domain_listen_quic raw = r```
             address = "0.0.0.0:11251"
             ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem"}
@@ -589,51 +584,51 @@ net {
 
 
         #层级：server
-        #domain模式，开启http支持，调试用，内置toml格式扩展
+        #domain模式，开启http支持，调试用
         net_server_http raw = r```
         ```r;
 
         #层级：server
-        #domain模式，开启websocket支持，调试用，内置toml格式扩展
+        #domain模式，开启websocket支持，调试用
         net_server_websocket raw = r```
         ```r;
 
 
         #层级：local
-        #domain模式，开启http支持，调试用，内置toml格式扩展
+        #domain模式，开启http支持，调试用
         net_server_http_echo raw = r```
             body = "\nhello\n"
         ```r;
 
         #层级：local
-        #domain模式，开启http静态服务，内置toml格式扩展
+        #domain模式，开启http静态服务
         net_server_http_static raw = r```
             path = "C:/Users/yefy/Desktop/yefy/tools/nginx/nginx-1.18.0/html"
         ```r;
 
         #层级：local
-        #domain模式，开启http反向代理服务，内置toml格式扩展
+        #domain模式，开启http反向代理服务
         net_server_http_proxy raw = r```
             proxy_pass = {version = "http1.1"}
         ```r;
 
 
         #层级：local
-        #domain模式，开启websocke支持，调试用，内置toml格式扩展
+        #domain模式，开启websocke支持，调试用
         net_server_websocket_echo raw = r```
             body = "\nhello\n"
         ```r;
 
 
         #层级：local
-        #domain模式，开启websocke支持，调试用，内置toml格式扩展
+        #domain模式，开启websocke支持，调试用
         net_server_websocket_static raw = r```
             path = "C:/Users/yefy/Desktop/yefy/tools/nginx/nginx-1.18.0/html"
         ```r;
 
 
         #层级：local
-        #domain模式，开启websocke反向代理服务，内置toml格式扩展
+        #domain模式，开启websocke反向代理服务
         net_server_websocket_proxy raw = r```
         ```r;
 
@@ -641,7 +636,7 @@ net {
         #local可以配置多个
         local {
             #层级：local
-            #匹配规则，filter配置data值，就进入这个local， 内置toml格式扩展
+            #匹配规则，filter配置data值，就进入这个local
             rule raw = r```
                 [[rule]]
                 #支持预制变量
@@ -671,7 +666,7 @@ net {
             ```r;
 
             #层级：local
-            #tcp协议回源，， 内置toml格式扩展
+            #tcp协议回源
             proxy_pass_tcp raw = r```
                 address = "www.upstream.cn:11131"
                 #heartbeat = {interval = 10, timeout = 10, fail = 3}
@@ -680,7 +675,7 @@ net {
             ```r;
 
             #层级：local
-            #ssl协议回源，， 内置toml格式扩展
+            #ssl协议回源
             proxy_pass_ssl raw = r```
                 ssl_domain= "www.example.cn"
                 address = "www.upstream.cn:11132"
@@ -690,7 +685,7 @@ net {
             ```r;
 
             #层级：local
-            #quic协议回源，， 内置toml格式扩展
+            #quic协议回源
             proxy_pass_quic raw = r```
                 ssl_domain= "www.example.cn"
                 address = "www.upstream.cn:11131"
@@ -700,7 +695,7 @@ net {
             ```r;
 
             #层级：local
-            #tunnel_tcp协议回源，， 内置toml格式扩展
+            #tunnel_tcp协议回源
             proxy_pass_tunnel_tcp raw = r```
                 tunnel = { max_stream_size = 5, min_stream_cache_size = 50, channel_size = 64}
                 address = "www.upstream.cn:11131"
@@ -710,7 +705,7 @@ net {
             ```r;
 
             #层级：local
-            #tunnel_ssl协议回源，， 内置toml格式扩展
+            #tunnel_ssl协议回源
             proxy_pass_tunnel_ssl raw = r```
                 tunnel = { max_stream_size = 5, min_stream_cache_size = 50, channel_size = 64}
                 ssl_domain= "www.example.cn"
@@ -721,7 +716,7 @@ net {
             ```r;
 
             #层级：local
-            #tunnel_quic协议回源，， 内置toml格式扩展
+            #tunnel_quic协议回源
             proxy_pass_tunnel_quic raw = r```
                 tunnel = { max_stream_size = 5, min_stream_cache_size = 50, channel_size = 64}
                 ssl_domain= "www.example.cn"
