--- a/any-example/anyproxy/conf/anyproxy_proxy_to_origin.conf
+++ b/any-example/anyproxy/conf/anyproxy_proxy_to_origin.conf
@@ -190,33 +190,34 @@ net {
     ```r;
     proxy_cache_name strs = proxy_cache_1 proxy_cache_2;
     proxy_request_slice usize = 3;
-        proxy_cache_key str = "${http_request_method}${http_request_scheme}${http_request_host}${http_request_uri}";
-        #proxy_cache_key str = "${http_ups_request_method}${http_ups_request_scheme}${http_ups_request_host}${http_ups_request_uri}";
-        proxy_cache_methods strs = GET HEAD POST;
-        proxy_cache_valid raw = r```
-            [[proxy_cache_valid]]
-            status = ["500", "404", "any"]
-            time = 30
-        ```r;
+    proxy_cache_key str = "${http_request_method}${http_request_domain}${http_request_uri}";
 
-        proxy_expires_file_timer u64 = 10;
-        proxy_max_open_file usize = 5;
-        proxy_get_to_get_range bool = false;
+    proxy_cache_methods strs = GET HEAD POST;
+    proxy_cache_valid raw = r```
+        [[proxy_cache_valid]]
+        #status = ["500", "404", "any"]
+        status = ["404"]
+        time = 30
+    ```r;
 
-        #层级：main|server|local
-        #热点文件配置
-        proxy_hot_file raw = r```
-            #是否打开
-            is_open = true
-            #时间间隔统计一次
-            hot_interval_time = 15
-            #前面多少个是热点文件
-            hot_top_count = 5
-            #读取多少次，才能是热点文件, 暂时不支持
-            hot_read_min_count = 10
-            #磁盘io达到多少后,开始迁移热点文件
-            hot_io_percent = 0
-        ```r;
+    proxy_expires_file_timer u64 = 30;
+    proxy_max_open_file usize = 0;
+    proxy_get_to_get_range bool = false;
+
+    #层级：main|server|local
+    #热点文件配置
+    proxy_hot_file raw = r```
+        #是否打开
+        is_open = true
+        #时间间隔统计一次
+        hot_interval_time = 15
+        #前面多少个是热点文件
+        hot_top_count = 5
+        #读取多少次，才能是热点文件, 暂时不支持
+        hot_read_min_count = 10
+        #磁盘io达到多少后,开始迁移热点文件
+        hot_io_percent = 0
+    ```r;
 
     stream_delay_mil_time u64 = 200;
     stream_nodelay_size usize = 8192;
