--- a/any-example/anyproxy/conf/anyproxy_edge_to_proxy.conf
+++ b/any-example/anyproxy/conf/anyproxy_edge_to_proxy.conf
@@ -107,17 +107,18 @@ net {
 
     proxy_cache_name strs = proxy_cache_1 proxy_cache_2;
     proxy_request_slice usize = 3;
-    proxy_cache_key str = "${http_request_method}${http_request_scheme}${http_request_host}${http_request_uri}";
-    #proxy_cache_key str = "${http_ups_request_method}${http_ups_request_scheme}${http_ups_request_host}${http_ups_request_uri}";
+    proxy_cache_key str = "${http_request_method}${http_request_domain}${http_request_uri}";
+
     proxy_cache_methods strs = GET HEAD POST;
     proxy_cache_valid raw = r```
         [[proxy_cache_valid]]
-        status = ["500", "404", "any"]
+        #status = ["500", "404", "any"]
+        status = ["404"]
         time = 30
     ```r;
 
-    proxy_expires_file_timer u64 = 10;
-    proxy_max_open_file usize = 5;
+    proxy_expires_file_timer u64 = 30;
+    proxy_max_open_file usize = 0;
     proxy_get_to_get_range bool = false;
 
     #层级：main|server|local
@@ -190,8 +191,8 @@ net {
     include  = ./anyproxy_edge_to_proxy_http.conf;
     include  = ./anyproxy_edge_to_proxy_protocol.conf;
     include  = ./anyproxy_edge_to_proxy_websocket.conf;
-    include  = ./anyproxy_edge_to_proxy_wasm_http.conf;
-    include  = ./anyproxy_edge_to_proxy_wasm_websocket.conf;
+    #include  = ./anyproxy_edge_to_proxy_wasm_http.conf;
+    #include  = ./anyproxy_edge_to_proxy_wasm_websocket.conf;
 }
 
 
