--- a/any-example/anyproxy/conf/anyproxy_demo.conf
+++ b/any-example/anyproxy/conf/anyproxy_demo.conf
@@ -277,6 +277,12 @@ net {
      rewrite strs = ^(.*)/2.txt$ ${1}/1.txt redirect;
      rewrite strs = ^(.*)/4.txt$ ${1}/1.txt permanent;
 
+    #层级：main server local
+    ip_allow str = 127.0.0.1;
+    ip_allow str = 127.0.0.1/24;
+    ip_deny str = 192.168.90.1;
+    ip_deny str = all;
+
     #层级：main|server|local
     #wasm_access 阶段添加webassembly热更新脚本
     wasm_access raw = r```
