--- a/any-example/anyproxy/conf/anyproxy_edge_to_proxy_upstream.conf
+++ b/any-example/anyproxy/conf/anyproxy_edge_to_proxy_upstream.conf
@@ -369,6 +369,54 @@ upstream {
          ###r
      }
 
+
+    server {
+         #配置名字，可以根据名字来引用配置
+         name str = upstream8_6;
+         #负载均衡 weight round_robin random ip_hash ip_hash_active fair
+         balancer str = random;
+         proxy_pass_tcp raw = r```
+             address = "www.upstream6.cn:10201"
+             #address = "www.upstream6.cn:19090"
+             #heartbeat = {interval = 10, timeout = 10, fail = 3, http = {port = 10203, uri = "/1.txt"}}
+             #dynamic_domain = {interval = 10}
+             is_proxy_protocol_hello = true
+         ```r;
+         proxy_pass_ssl raw = r```
+             ssl_domain= "www.example6.cn"
+             address = "www.upstream6.cn:10202"
+             is_proxy_protocol_hello = true
+         ```r;
+         proxy_pass_quic raw = r```
+             ssl_domain= "www.example6.cn"
+             address = "www.upstream6.cn:10202"
+             is_proxy_protocol_hello = true
+         ```r;
+         proxy_pass_tunnel_tcp raw = r```
+             tunnel = { max_stream_size = 5, min_stream_cache_size = 50, channel_size = 64}
+             address = "www.upstream6.cn:10201"
+             #heartbeat = {interval = 10, timeout = 10, fail = 3}
+             #dynamic_domain = {interval = 10}
+             is_proxy_protocol_hello = true
+         ```r;
+         proxy_pass_tunnel_ssl raw = r```
+             tunnel = { max_stream_size = 5, min_stream_cache_size = 50, channel_size = 64}
+             ssl_domain= "www.example6.cn"
+             address = "www.upstream6.cn:10202"
+             #heartbeat = {interval = 10, timeout = 10, fail = 3}
+             #dynamic_domain = {interval = 10}
+             is_proxy_protocol_hello = true
+         ```r;
+         proxy_pass_tunnel_quic raw = r```
+             tunnel = { max_stream_size = 5, min_stream_cache_size = 50, channel_size = 64}
+             ssl_domain= "www.example6.cn"
+             address = "www.upstream6.cn:10202"
+             #heartbeat = {interval = 10, timeout = 10, fail = 3}
+             #dynamic_domain = {interval = 10}
+             is_proxy_protocol_hello = true
+         ```r;
+     }
+
     server {
          #配置名字，可以根据名字来引用配置
          name str = upstream9;
