--- a/any-example/anyproxy/conf/anyproxy_origin.conf
+++ b/any-example/anyproxy/conf/anyproxy_origin.conf
@@ -126,7 +126,49 @@ r###
         }
     }
 ###r
+    server {
+        # $$(.*)
+        domain str = "www.example6.cn";
+         net_server_http raw = r```
+        ```r;
+        domain_listen_tcp raw = r```
+            address = "[::]:80"
+        ```r;
+        domain_listen_tcp raw = r```
+            address = "[::]:19090"
+        ```r;
+        domain_listen_ssl raw = r```
+            address = "[::]:19091"
+            ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem"}
+        ```r;
+        domain_listen_tcp raw = r```
+            address = "[::]:19092"
+        ```r;
+        domain_listen_ssl raw = r```
+            address = "[::]:19093"
+            ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem"}
+        ```r;
 
+        rewrite strs = ^(.*)/2.txt$ ${1}/1.txt redirect;
+        rewrite strs = ^(.*)/3.txt$ ${1}/1.txt redirect;
+        local {
+            rule raw = r```
+                [[rule]]
+                data= ""
+                filter = "$$(.*)"
+            ```r;
+
+        rewrite strs = ^(.*)/4.txt$ ${1}/1.txt permanent;
+        rewrite strs = ^(.*)/5.txt$ ${1}/1.txt permanent;
+
+         net_server_http_static window_raw = r```
+            path = "C:/Users/yefy/Desktop/yefy/tools/nginx/nginx-1.18.0/html"
+        ```r;
+         net_server_http_static linux_raw = r```
+            path = "/root/Desktop/fdisk/nginx/nginx-1.18.0/nginx/html"
+        ```r;
+        }
+    }
 server {
         transfer_encoding_chunked bool = true;
         # $$(.*)
