--- a/any-example/anyproxy/conf/anyproxy_proxy_to_origin.conf
+++ b/any-example/anyproxy/conf/anyproxy_proxy_to_origin.conf
@@ -129,6 +129,22 @@ upstream {
         ```r;
     }
 
+
+    server {
+        #配置名字，可以根据名字来引用配置
+        name str = upstream_http_http_6;
+        #负载均衡 weight round_robin random ip_hash ip_hash_active fair
+        balancer str = random;
+        proxy_pass_tcp raw = r```
+            address = "www.upstream6.cn:19090"
+        ```r;
+
+        proxy_pass_ssl raw = r```
+            ssl_domain= "www.example6.cn"
+            address = "www.upstream6.cn:19091"
+        ```r;
+    }
+
     server {
         #配置名字，可以根据名字来引用配置
         name str = upstream_http_http2;
@@ -464,6 +480,42 @@ net {
             proxy_pass_upstream str = "upstream_http_http";
         }
     }
+
+    #upstream8_6
+    #http(http1.0 http1.1 http2.0)->http, http->(http1.1,https1.1)
+    #curl http://www.example6.cn:10201 -k -v
+
+    #https(https1.0 https1.1 https2.0)->https, http->(http1.1,https1.1)
+    #curl https://www.example6.cn:10202 -k -v
+        server {
+            domain str = "www.example6.cn";
+            net_server_http raw = r```
+            ```r;
+             domain_listen_tcp raw = r```
+                address = "[::]:10201"
+            ```r;
+            domain_listen_ssl raw = r```
+                address = "[::]:10202"
+                ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem"}
+            ```r;
+            domain_listen_quic raw = r```
+                address = "[::]:10202"
+                ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem"}
+            ```r;
+            local {
+                rule raw = r```
+                    [[rule]]
+                    data= ""
+                    filter = "$$(.*)"
+                ```r;
+            net_server_http_proxy raw = r```
+                #version: http1.1 http2.0 auto
+                proxy_pass = {version = "http1.1"}
+            ```r;
+                proxy_pass_upstream str = "upstream_http_http_6";
+            }
+        }
+
 
     server {
             domain str = "www.upstream.cn";
