--- a/any-example/anyproxy/conf/anyproxy_edge_to_proxy_http.conf
+++ b/any-example/anyproxy/conf/anyproxy_edge_to_proxy_http.conf
@@ -63,7 +63,12 @@
 
             proxy_cache_purge bool = true;
 
-            expires usize = 11;
+            ip_allow str = 127.0.0.1;
+            ip_allow str = 127.0.0.1/24;
+            ip_deny str = 192.168.90.1;
+            ip_deny str = all;
+
+            expires usize = 12;
             proxy_pass_upstream str = "upstream8";
         }
 
@@ -81,7 +86,7 @@
                 proxy_pass = {version = "auto"}
             ```r;
 
-            expires usize = 11;
+            expires usize = 13;
             proxy_pass_upstream str = "upstream8";
         }
 
@@ -114,6 +119,131 @@
 
             expires usize = 3;
             proxy_pass_upstream str = "upstream8";
+        }
+    }
+
+
+#http(http1.0 http1.1 http2.0)->http, http->(http1.1,https1.1)
+#curl http://www.example6.cn:20201 -k -v
+
+#https(https1.0 https1.1 https2.0)->https, http->(http1.1,https1.1)
+#curl https://www.example6.cn:20202 -k -v
+    server {
+        stream_cache_size  usize = 131072;
+        is_open_sendfile linux_bool= true;
+        stream_nopush bool = true;
+        is_upload_open_stream_cache bool = true;
+        is_download_open_stream_cache bool = true;
+        download_tmp_file_size  u64= 10240000 ;#default 0  10240000
+        upload_tmp_file_size  u64= 10240000; #default 0
+
+        download_tmp_file_reopen_size u64= 1024000000 ;#default 0  10240000
+        upload_tmp_file_reopen_size u64= 1024000000; #default 0
+
+        domain str = "www.example6.cn";
+        net_server_http raw = r```
+        ```r;
+
+         domain_listen_tcp raw = r```
+            address = "[::]:20201"
+        ```r;
+        domain_listen_ssl raw = r```
+            address = "[::]:20202"
+            ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem"}
+        ```r;
+        domain_listen_quic raw = r```
+            address = "[::]:20202"
+            ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem"}
+        ```r;
+
+        expires usize = 0;
+        local {
+            rule raw = r```
+                [[rule]]
+                 data= "${http_request_uri}"
+                 filter = "/test_nil"
+            ```r;
+            net_server_http_proxy raw = r```
+                #version: http1.1 http2.0 auto
+                proxy_pass = {version = "auto"}
+            ```r;
+
+            expires usize = 11;
+            proxy_pass_upstream str = "upstream_nil";
+        }
+
+        local {
+            rule raw = r```
+                [[rule]]
+                 data= "${http_request_uri}"
+                 filter = "/purge"
+            ```r;
+            net_server_http_proxy raw = r```
+                #version: http1.1 http2.0 auto
+                proxy_pass = {version = "auto"}
+            ```r;
+
+            net_server_http_purge raw = r```
+            ```r;
+
+            proxy_cache_purge bool = true;
+
+            ip_allow str = 127.0.0.1;
+            ip_allow str = 127.0.0.1/24;
+            ip_deny str = 192.168.90.1;
+            ip_deny str = all;
+
+            expires usize = 11;
+            proxy_pass_upstream str = "upstream8_6";
+        }
+
+        local {
+            rule raw = r```
+                [[rule]]
+                data= "${http_request_url}"
+                filter = "http"
+                [[rule]]
+                 data= "${http_request_uri}"
+                 filter = "/test"
+            ```r;
+            net_server_http_proxy raw = r```
+                #version: http1.1 http2.0 auto
+                proxy_pass = {version = "auto"}
+            ```r;
+
+            expires usize = 11;
+            proxy_pass_upstream str = "upstream8_6";
+        }
+
+        local {
+            rule raw = r```
+                [[rule]]
+                data= "${http_request_url}"
+                filter = "https"
+            ```r;
+            net_server_http_proxy raw = r```
+                #version: http1.1 http2.0 auto
+                proxy_pass = {version = "auto"}
+            ```r;
+
+            expires usize = 2;
+            proxy_pass_upstream str = "upstream8_6";
+        }
+
+
+        local {
+            rule raw = r```
+                [[rule]]
+                data= ""
+                filter = "$$(.*)"
+            ```r;
+            net_server_http_proxy raw = r```
+                #version: http1.1 http2.0 auto
+                proxy_pass = {version = "auto"}
+            ```r;
+
+            expires usize = 3;
+            proxy_pass_upstream str = "upstream8_6";
         }
     }
 
@@ -192,6 +322,7 @@
             address = "0.0.0.0:20303"
             ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem"}
         ```r;
+
         local {
             rule raw = r```
                 [[rule]]
@@ -224,6 +355,7 @@
             address = "0.0.0.0:20305"
             ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem"}
         ```r;
+
         local {
             rule raw = r```
                 [[rule]]
@@ -266,6 +398,7 @@
             address = "0.0.0.0:20307"
             ssl = {key = "./cert/www.example.cn.key.pem", cert = "./cert/www.example.cn.cert.pem"}
         ```r;
+
         local {
             rule raw = r```
                 [[rule]]
