--- a/any-example/anyproxy/conf/anyproxy_proxy_to_origin.conf
+++ b/any-example/anyproxy/conf/anyproxy_proxy_to_origin.conf
@@ -224,7 +224,7 @@ net {
     #热点文件配置
     proxy_hot_file raw = r```
         #是否打开
-        is_open = true
+        is_open = false
         #时间间隔统计一次
         hot_interval_time = 15
         #前面多少个是热点文件
